adding --enable-preview and cleaning up benchmark code. Need to add cpu measures to results.